This file documents the revision history for the Mod-Gearman-Worker-Go

1.0.3    Thu Nov 15 11:42:52 CET 2018
          - fix increasing servers on sighup
          - fix returning timeout results

1.0.2    Tue Oct 30 11:36:34 CET 2018
          - fix issue with hostchecks not returned properly
          - internal improvements

1.0.1    Mon Oct 22 11:33:24 CEST 2018
          - improve ipv6 support
          - add send_gearman tool
          - add windows cross-build support
          - improve command arg parsing (#1)

1.0.0    Tue Oct 16 17:57:39 CEST 2018
          - initial release