@@ -1,5 +1,8 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
+next:
+          - rework server failover handling
+
 1.0.3    Thu Nov 15 11:42:52 CET 2018
           - fix increasing servers on sighup
           - fix returning timeout results
